--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,4 @@
-[package]
-name = "the-book"
-version = "0.1.0"
-authors = ["Gregory Langlais <general@gregorylanglais.com>"]
-edition = "2018"
-
-[dependencies]
+[workspace]
+members = [
+    "ch01_02_hello_world",
+]
