--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ members = [
     "ch01_02_hello_world",
     "ch02_00_guessing_game_tutorial",
     "ch03_01_variables_and_mutability",
+    "ch03_02_data_types",
 ]
