--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ members = [
     "ch02_00_guessing_game_tutorial",
     "ch03_01_variables_and_mutability",
     "ch03_02_data_types",
+    "ch03_03_how_functions_work",
 ]
