--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ members = [
     "ch03_05_control_flow",
     "ch04_01_what_is_ownership",
     "ch04_02_references_and_borrowing",
+    "ch04_03_slices",
 ]
