--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ members = [
     "ch07_03_paths_for_referring_to_an_item_in_the_module_tree",
     "ch07_04_bringing_paths_into_scope_with_the_use_keyword",
     "ch07_05_separating_modules_into_different_files",
+    "ch08_01_vectors",
 ]
