add recoverable errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ members = [
     "ch08_02_strings",
     "ch08_03_hash_maps",
     "ch09_01_unrecoverable_errors_with_panic",
+    "ch09_02_recoverable_errors_with_result",
 ]
