--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,5 @@ members = [
     "ch08_03_hash_maps",
     "ch09_01_unrecoverable_errors_with_panic",
     "ch09_02_recoverable_errors_with_result",
+    "ch09_03_to_panic_or_not_to_panic",
 ]
