--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,5 @@ members = [
     "ch11_01_writing_tests",
     "ch11_02_running_tests",
     "ch11_03_test_organization",
+    "ch12_01_accepting_command_line_arguments",
 ]
