--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,5 @@ members = [
     "ch12_01_accepting_command_line_arguments",
     "ch12_02_reading_a_file",
     "ch12_03_improving_error_handling_and_modularity",
+    "ch12_04_testing_the_librarys_functionality",
 ]
