--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,4 +38,5 @@ members = [
     "ch12_03_improving_error_handling_and_modularity",
     "ch12_04_testing_the_librarys_functionality",
     "ch12_05_working_with_environment_variables",
+    "ch12_06_writing_to_stderr_instead_of_stdout",
 ]
