--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,5 @@ members = [
     "ch12_05_working_with_environment_variables",
     "ch12_06_writing_to_stderr_instead_of_stdout",
     "ch13_01_closures",
+    "ch13_02_iterators",
 ]
