--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,4 +41,5 @@ members = [
     "ch12_06_writing_to_stderr_instead_of_stdout",
     "ch13_01_closures",
     "ch13_02_iterators",
+    "ch13_03_improving_our_io_project",
 ]
