--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,5 @@ members = [
     "ch13_01_closures",
     "ch13_02_iterators",
     "ch13_03_improving_our_io_project",
+    "ch14_01_release_profiles",
 ]
