--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,4 +52,5 @@ members = [
     "ch13_03_improving_our_io_project",
     "ch14_01_release_profiles",
     "ch14_02_publishing_to_crates_io",
+    "ch14_03_cargo_workspaces",
 ]
