--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,5 +56,6 @@ members = [
     "ch16_03_shared_state",
     "ch17_01_what_is_oo",
     "ch17_02_trait_objects",
-    "ch17_03_oo_design_patterns"
+    "ch17_03_oo_design_patterns",
+    "ch18_01_all_the_places_for_patterns"
 ]
