--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,5 +57,6 @@ members = [
     "ch17_01_what_is_oo",
     "ch17_02_trait_objects",
     "ch17_03_oo_design_patterns",
-    "ch18_01_all_the_places_for_patterns"
+    "ch18_01_all_the_places_for_patterns",
+    "ch18_02_refutability"
 ]
