--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,5 +59,6 @@ members = [
     "ch17_03_oo_design_patterns",
     "ch18_01_all_the_places_for_patterns",
     "ch18_02_refutability",
-    "ch18_03_pattern_syntax"
+    "ch18_03_pattern_syntax",
+    "ch19_01_unsafe_rust"
 ]
