add advanced traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,5 +60,6 @@ members = [
     "ch18_01_all_the_places_for_patterns",
     "ch18_02_refutability",
     "ch18_03_pattern_syntax",
-    "ch19_01_unsafe_rust"
+    "ch19_01_unsafe_rust",
+    "ch19_03_advanced_traits"
 ]
