--- a/ch19_06_macros/src/hello_macro/Cargo.toml
+++ b/ch19_06_macros/src/hello_macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ch19_06_macros"
+name = "hello_macro"
 version = "0.1.0"
 authors = ["Gregory Langlais <general@gregorylanglais.com>"]
 edition = "2018"
@@ -7,5 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hello_macro = { path = "src/hello_macro" }
-hello_macro_derive = { path = "src/hello_macro/src/hello_macro_derive" }
