--- a/ch19_06_macros/src/hello_macro/src/hello_macro_derive/Cargo.toml
+++ b/ch19_06_macros/src/hello_macro/src/hello_macro_derive/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "ch19_06_macros"
+name = "hello_macro_derive"
 version = "0.1.0"
 authors = ["Gregory Langlais <general@gregorylanglais.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
-hello_macro = { path = "src/hello_macro" }
-hello_macro_derive = { path = "src/hello_macro/src/hello_macro_derive" }
+syn = "1.0"
+quote = "1.0"
