--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,5 +65,6 @@ members = [
     "ch19_04_advanced_types",
     "ch19_05_advanced_functions_and_closures",
     "ch19_06_macros",
-    "ch20_01_single_threaded"
+    "ch20_01_single_threaded",
+    "ch20_02_multithreaded"
 ]
